test/fail/integration/_fail_sem_expr_intdiv_1.hs
x :: Int
x = "hello" div 4
main = print "hello"